# pm-ai

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
,github/workflows/: ci.yml
conf/: general.toml  orchestrator.toml  streamlit.toml
evals/: golden_samples.json
migration/: 001_init.sql
prompt/: oracle_v1.txt  oracle_v2.txt
src/: __init__.py  app.py  conf.py
src/db/: __init__.py  database.py  schemas.py
src/evals/: __init__.py  dataset.py  golden_samples.json  runner.py
src/orchestrator/: __init__.py  graph.py  message_utils.py  nodes.py  planner.py  routing.py  runtime.py  state.py
src/tools/: __init__.py  base.py  read_tools.py  tools.py  tools_registry.py  write_tools.py
src/ui/: __init__.py  st_app.py
test/: test_tools.py
tests/: test_binding.py  test_evals.py  test_orchestrator.py
utils/config/: __init__.py  config.py  json_handler.py  log_handler.py  path_handler.py  toml_handler.py  yml_handler.py
utils/llms/: __init__.py  llm_client.py
