[project]
name = "pm-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "duybuile"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "openai (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
